--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -36,6 +36,17 @@ table {
     border-color: grey;
     background-color: #fff;
 }
+
+.url {
+  text-align: center;
+}
+.inputUrl {
+  width: 200px;
+  height: 30px;
+  border: 1px solid #c8c8c8;
+  font-size: 14px;
+  padding-left: 6px;
+}
 .inputMText {
 
     width: 200px;
