--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
           </li>
         <% else %>
           <li>
-            <%= link_to("自動登録をする", "/user/show") %>
+            <%= link_to("自動登録を始める", "/user/show") %>
           </li>
           <li>
             <%= link_to("ログアウト", "/logout", {method: :post}) %>
